--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "primeicons": "^5.0.0",
+    "primevue": "^2.8.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
