--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
+    "mitt": "^3.0.0",
+    "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
     "primevue": "^2.8.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
