--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
+    "es6-promise": "^4.2.8",
     "mitt": "^3.0.0",
     "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
