--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "pocprimevue2",
   "version": "0.1.0",
   "private": true,
+  "main": "scr/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "webpack"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -15,12 +16,21 @@
     "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
     "primevue": "^2.8.0",
+    "promise-polyfill": "8.2.1",
+    "regenerator-runtime": "^0.13.9",
     "vue": "^2.6.11",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "babel-loader": "^8.2.2",
+    "standard": "^16.0.3",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.9.1"
   }
 }
