--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.5.1",
     "standard": "^16.0.3",
+    "style-loader": "^3.3.1",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.50.0",
