--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "scr/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "server": "node server.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -28,6 +31,7 @@
     "@vue/cli-service": "~4.5.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
     "standard": "^16.0.3",
     "style-loader": "^3.3.1",
     "vue-loader": "^15.9.8",
