--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "scr/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "watch": "webpack --watch",
-    "start": "webpack serve --open",
+    "start": "webpack-dev-server --mode development",
     "server": "node server.js"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "promise-polyfill": "8.2.1",
     "regenerator-runtime": "^0.13.9",
     "vue": "^2.6.11",
+    "webpack-dev-server": "^4.6.0",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
@@ -29,9 +30,17 @@
     "@babel/preset-env": "^7.15.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
     "standard": "^16.0.3",
     "style-loader": "^3.3.1",
     "vue-loader": "^15.9.8",
